    - Fix use-after-free vulnerability in the glob function when expanding
      ~user (CVE-2020-1752).  Closes: #953788.
  * debian/debhelper.in/libc.preinst, debian/rules.d/debhelper.mk: determine
    ld.so ELF magic at build time instead of at run time to avoid using
    "readlink -m".  Closes: #954374.
  * debian/rules.d/build.mk: unset LANGUAGE when running the testsuite.

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 19 Mar 2020 23:30:17 +0100

glibc (2.30-2) unstable; urgency=medium

  * debian/rules.d/debhelper.mk: depends on libgcc-sN instead of libgccN.
    Closes: #953657.
  * debian/rules.d/build.mk: do not install <finclude/math-vector-fortran.h>
    for now as it is not multiarch safe.

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 12 Mar 2020 23:47:03 +0100

glibc (2.30-1) unstable; urgency=medium

  [ Samuel Thibault ]
  * testsuite-xfail-debian.mk: Update non-regressions.
  * debian/patches/hurd-i386/git-fork-pthread_exit.diff: New patch to fix
    pthread_exit after fork.
  * debian/patches/hurd-i386/git-spin_lock.diff: New patch to fix
    pthread_spin_lock behavior for shared memory.
  * debian/patches/hurd-i386/git-barrier-1.diff: New patch to fix
    pthread_barrier_wait with one thread.
  * debian/patches/hurd-i386/git-sem-intr.diff: New patch to make
    sem_wait/timedwait interruptible.
  * debian/patches/hurd-i386/local-atfork-link.diff: New patch to fix
    libpthread link.
  * debian/patches/hurd-i386/git-register-atfork.diff: Fix linking with static
    libpthread.
  * debian/patches/hurd-i386/git-pthread_self.diff: New patch to improve
    libpthread performance.

  [ Aurelien Jarno ]
  * debian/patches/any/local-revert-24323.diff: drop, obsolete.
  * debian/control.in/libc: add a Breaks: against wcc (<< 0.0.2+dfsg-3).
  * debian/patches/git-updates.diff: update from upstream stable branch:
    - Fix argument passing for inlined syscalls on mips* and riscv64.
      Closes: #951237.