@@ -413,6 +413,11 @@ endif
 ifeq ($(config-machine)-$(config-os),i686-linux-gnu)
 # Probably a GCC bug: https://sourceware.org/ml/libc-alpha/2015-11/msg00533.html
 test-xfail-tst-cleanupx4 = yes
+
+# These failures happen on CPUs supporting AVX-512 due to a kernel bug:
+# https://bugzilla.kernel.org/show_bug.cgi?id=153531
+test-xfail-tst-minsigstksz-1 = yes
+test-xfail-tst-minsigstksz-2 = yes
 endif
 
 
