@@ -7,6 +7,9 @@ glibc (2.30-3) UNRELEASED; urgency=medium
     ld.so ELF magic at build time instead of at run time to avoid using
     "readlink -m".  Closes: #954374.
   * debian/rules.d/build.mk: unset LANGUAGE when running the testsuite.
+  * debian/testsuite-xfail-debian.mk: ignore signal/tst-minsigstksz-1 and
+    signal/tst-minsigstksz-2 on i386, they fail on i386 with an AVX-512 CPUs
+    due to a kernel bug.  Closes: #954715.
 
  -- Aurelien Jarno <aurel32@debian.org>  Thu, 19 Mar 2020 23:30:17 +0100
 
